<resources>
    <string name="app_name">Foosball League</string>
    <!-- Select players -->
    <string name="create_game_players_title">Select players</string>
    <string name="create_game_versus">VS</string>
    <string name="create_game_start_game">Let\'s play!</string>
    <!-- Start game -->
    <string name="start_game_title">Ready?</string>
    <!-- Game -->
    <string name="game_title">Let\'s play!</string>
    <string name="game_initial_score">0</string>
    <string name="game_cancel">Cancel</string>
    <string name="game_cancel_title">Are you sure to exit this game?</string>
    <string name="game_cancel_message">Game will be canceled</string>
    <string name="game_cancel_yes">Yes</string>
    <string name="game_cancel_no">No</string>
    <string name="game_over_title">GG!</string>
    <string name="game_over_initial_score">0</string>
    <string name="game_over_score_separator">:</string>
    <!-- Standings -->
    <string name="standings_title">Standings</string>
    <string name="history_date">%1$s (%2$s min) - %3$s</string>
    <string name="stat_player_detail">Played: %1$s | Win : %2$s% | Goals: %3$s</string>
    <string name="stat_player_position">%1$s.</string>
    <string name="action_show_team_stats">Team standing</string>
    <string name="action_show_player_stats">Player standing</string>

    <!-- Bottom bar -->
    <string name="menu_matchs">Matchs</string>
    <string name="menu_standings">Standings</string>
    <string name="menu_tournament">Cup</string>
    <string name="menu_account">Profile</string>
    <string name="img_no_description">No description</string>

    <!-- Dashboard games -->
    <string name="games_title">\uD83D\uDD25 Right now \uD83D\uDD25</string>
    <string name="games_master_league">V3D Master league</string>
    <string name="games_stadium_">V3D Stadium, Lyon</string>
    <string name="games_ready_to_rumble">Ready to rumble?</string>
    <string name="games_start_a_new_game">\u26BD\uFE0E Start a new game \u26BD\uFE0E</string>
    <string name="game_no_score">-</string>
    <string name="game_state_planned">Upcommming</string>
    <string name="game_state_started">Running</string>
    <string name="game_state_finished">Finished</string>
    <string name="game_state_canceled">Canceled</string>
    <string name="matchs_last_games">Last games</string>

    <!-- Game -->
    <string name="game_over_main_title">Game over!</string>
    <string name="game_over_new_game">New game</string>
    <string name="game_over_done">Done</string>
    <string name="game_goal_gamelle">G</string>
    <string name="start_game_start">Start!</string>
    <string name="start_game_versus">VS</string>


    <!-- Profile -->
    <string name="account_title">Profile</string>
    <string name="account_input_login">Login</string>
    <string name="account_button_signin">Signin</string>
    <string name="login_hint_login_form">Login</string>
    <string name="login_hint_password_form">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_in_fail">Login failed, are you sure to set the right login/password ?</string>
    <string name="login_snackbar_close">close</string>

    <!-- Tournament -->
    <string name="tournament_title">Cup</string>
    <string name="tournament_start_game">Start game</string>
    <string name="tournament_item_header_round">Round %1$s</string>

    <!-- Standings -->
    <string name="standings_third_name">3. %1$s</string>
    <string name="standings_second_name">2. %1$s</string>
    <string name="standings_first_name">1. %1$s</string>
    <string name="account_stats_header_goals">GOALS</string>
    <string name="account_stats_header_wins">WINS</string>
    <string name="account_stats_header_games">MATCHES</string>
    <string name="no_content_dash">-</string>
    <string name="no_game_get_the_first">No game, be the first ?</string>
    <string name="no_podium">Standings is empty, start to play to fill it!</string>
    <string name="start_game_settings">Game settings:</string>
    <string name="game_timesup_game_over">Game over!</string>

</resources>
