<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="1"
        android:background="@drawable/babyfoot_header"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutHeader"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutHeader"
        app:layout_constraintRight_toRightOf="@+id/constraintLayoutHeader"
        app:layout_constraintTop_toTopOf="@+id/constraintLayoutHeader">

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutColorOverLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.9"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutHeader"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayoutHeader"
        app:layout_constraintRight_toRightOf="@+id/constraintLayoutHeader"
        app:layout_constraintTop_toTopOf="@+id/constraintLayoutHeader">

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_right_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/games_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_league_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/games_master_league"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_right_now"/>

        <TextView
            android:id="@+id/tv_match_stadium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:alpha="0.8"
            android:text="@string/games_stadium_"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_league_title"/>


        <ImageView
            android:id="@+id/img_player_red_attack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/img_no_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_stadium"
            app:srcCompat="@drawable/ic_user"/>

        <TextView
            android:id="@+id/tv_player_red_attack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:text="Red A."
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/img_player_red_attack"
            app:layout_constraintRight_toRightOf="@+id/img_player_red_attack"
            app:layout_constraintTop_toBottomOf="@+id/img_player_red_attack"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintVertical_bias="0.0"/>

        <ImageView
            android:id="@+id/img_player_red_defense"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/img_no_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_player_red_attack"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_stadium"
            app:srcCompat="@drawable/ic_user"/>

        <TextView
            android:id="@+id/tv_player_red_defense_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Red D."
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="@+id/img_player_red_defense"
            app:layout_constraintRight_toRightOf="@+id/img_player_red_defense"
            app:layout_constraintTop_toBottomOf="@+id/img_player_red_defense"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_score_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/game_over_score_separator"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/tv_match_stadium"
            app:layout_constraintRight_toRightOf="@+id/tv_match_stadium"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_stadium"/>

        <TextView
            android:id="@+id/tv_score_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/game_over_initial_score"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_score_separator"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_stadium"/>

        <TextView
            android:id="@+id/tv_score_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/game_over_initial_score"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_score_separator"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_stadium"/>

        <ImageView
            android:id="@+id/img_player_blue_attack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/img_no_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/img_player_blue_defense"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_stadium"
            app:srcCompat="@drawable/ic_user"/>

        <TextView
            android:id="@+id/tv_player_blue_attack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Blue A."
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="@+id/img_player_blue_attack"
            app:layout_constraintRight_toRightOf="@+id/img_player_blue_attack"
            app:layout_constraintTop_toBottomOf="@+id/img_player_blue_attack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/img_player_blue_defense"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/img_no_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_match_stadium"
            app:srcCompat="@drawable/ic_user"/>

        <TextView
            android:id="@+id/tv_player_blue_defense_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Red D."
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="@+id/img_player_blue_defense"
            app:layout_constraintRight_toRightOf="@+id/img_player_blue_defense"
            app:layout_constraintTop_toBottomOf="@+id/img_player_blue_defense"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            android:layout_marginBottom="8dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>